--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,10 @@
     background-color: black;
     
 }
+
+.quebra-cabeca{
+    width: 900px;
+    height: 500px;
+    display: flex;
+    flex-wrap: wrap;
+}
